k8s/cloudbase-main-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudbase-main-depl
spec:
  selector:
    matchLabels:
      app: cloudbase-main-depl
  template:
    metadata:
      labels:
        app: cloudbase-main-depl
    spec:
      containers:
        - name: cloudbase-main-depl
          image: vnavaneeth/cloudbase-main
          imagePullPolicy: 'Never'
          resources:
            # limits:
            #   memory: "128Mi"
            #   cpu: "500m"
          # ports:
          # - containerPort: <Port>

---
apiVersion: v1
kind: Service
metadata:
  name: cloudbase-main-svc
spec:
  selector:
    app: cloudbase-main-depl
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
